<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015, 2019-2022 Qualcomm Technologies, Inc.
  All Rights Reserved.
  Confidential and Proprietary - Qualcomm Technologies, Inc.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/ims_settings"
        android:persistent="false">

    <ListPreference
        android:key="ims_vt_call_quality"
        android:title="@string/ims_vt_call_quality_title"
        android:entries="@array/ims_vt_call_quality_entries"
        android:entryValues="@array/ims_vt_call_quality_values"
        android:summary="@string/ims_vt_call_quality_unknown"
        android:persistent="false"
        android:enabled="true"
        android:dialogTitle="@string/ims_vt_call_quality_title"/>

    <EditTextPreference
        android:title="@string/qti_ims_call_deflect_title"
        android:dialogTitle="@string/qti_ims_call_deflect_title"
        android:key="@string/qti_ims_call_deflect"
        android:singleLine="true"
        android:inputType="text"
        android:summary="@string/qti_ims_number_not_set" />

    <Preference
        android:key="ims_vt_call_static_image"
        android:title="@string/ims_vt_call_static_image_text"
        android:contentDescription="@string/ims_vt_call_static_image_text" />

    <SwitchPreference
        android:key="@string/ims_to_cs_retry"
        android:title="@string/ims_to_cs_retry_title"
        android:persistent="false"
        android:summary="@string/ims_to_cs_retry_summary"/>

    <SwitchPreference
        android:key="toggle_rtt"
        android:title="@string/rtt_toggle_title"
        android:summary="@string/rtt_toggle_summary"/>

    <SwitchPreference
        android:key="rtt_visibility"
        android:title="@string/rtt_visibility_toggle_title"
        android:summary="@string/rtt_visibility_toggle_summary"/>

    <ListPreference
        android:key="ims_ar_mode"
        android:title="@string/ims_ar_mode_title"
        android:entries="@array/ims_ar_mode_entries"
        android:entryValues="@array/ims_ar_mode_values"
        android:summary="@string/ims_ar_mode_summary"/>

    <SwitchPreference
        android:key="toggle_call_composer"
        android:title="@string/call_composer_toggle_title"
        android:summary="@string/call_composer_toggle_summary"/>

    <SwitchPreference
        android:key="toggle_b2c_enriched_call"
        android:title="@string/b2c_enriched_call_toggle_title"
        android:summary="@string/b2c_enriched_call_toggle_summary"/>


    <SwitchPreference
        android:key="toggle_data_channel"
        android:title="@string/data_channel_toggle_title"
        android:summary="@string/data_channel_toggle_summary"/>

    <ListPreference
        android:key="ims_rtt_operation_mode"
        android:title="@string/rtt_operation_mode_title"
        android:summary="@string/rtt_operation_mode_summary"
        android:entries="@array/ims_rtt_operation_mode_entries"
        android:entryValues="@array/ims_rtt_operation_mode_values"/>

    <SwitchPreference
        android:key="toggle_rtt_call_type"
        android:title="@string/rtt_call_type_toggle_title"
        android:summary="@string/rtt_call_type_toggle_summary"/>
</PreferenceScreen>
